--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "examples/amaranth-demo",
     "examples/advanced-demo"
   ],
-  "name": "gatsby-starter-advanced",
-  "description": "GatsbyJS starter that includes examples for advanced use cases.",
-  "version": "4.0.0",
-  "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
+  "name": "junwoo45.github.io",
+  "description": "박준우 블로그",
+  "version": "1.0.0",
+  "author": "junwoo45 <sinyoorang@gmail.com>",
   "keywords": [
     "gatsby",
     "gatsby-starter",
