chore: 필요없는 파일 제거

--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "dev:network": "gatsby develop -H 0.0.0.0",
     "serve": "gatsby serve",
     "build": "gatsby build",
-    "build:gh": "npm run clean && npm run build && gh-pages -d public",
-    "clean": "rm -rf public && rm -rf .cache",
+    "build:gh": "npm run clean && npm run build && gh-pages -d release",
+    "clean": "rm -rf release && rm -rf .cache",
+    "deploy": "gatsby build && gh-pages -d release -b release",
     "lint:js": "eslint --ext .ts,.tsx,.js,.jsx .",
     "lint:deadcode": "ts-prune -i '(test|gatsby)'",
     "lint:styles": "stylelint src/**/*.{js,jsx,ts,tsx,css}",
@@ -37,12 +38,6 @@
     "test": "jest",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
-    "cy:open:dev": "CYPRESS_STAGE=dev CYPRESS_BASE_URL=http://localhost:8000 cypress open",
-    "cy:open": "cypress open",
-    "cy:run": "cypress run",
-    "test:e2e:dev": "CYPRESS_SUPPORT=y CYPRESS_BASE_URL=http://localhost:8000 CYPRESS_STAGE=dev start-server-and-test develop http://localhost:8000 cy:open",
-    "test:e2e": "CYPRESS_SUPPORT=y npm run build && start-server-and-test serve http://localhost:9000 cy:open",
-    "test:e2e:ci": "CYPRESS_SUPPORT=y npm run build && start-server-and-test serve http://localhost:9000 cy:run",
     "write-good": "write-good **/content/*.{md,mdx}"
   },
   "dependencies": {
